tests/errors/dataclass_w1_othermod.pxd
# Extern class for test "dataclass_w1"
cdef class SomeBase:
    pass
